dropped duplicated enum
