# transaction-service/src/main/java/com/example/transaction/controller/converter/TransactionInitRequestHttpMessageConverter.java
@@ -17,11 +17,10 @@ import org.springframework.web.servlet.HandlerMapping;
 
 import com.example.transaction.dto.DepositInitRequest;
 import com.example.transaction.dto.InitRequest;
-import com.example.transaction.dto.TransactionType;
 import com.example.transaction.dto.TransferInitRequest;
 import com.example.transaction.dto.WithdrawalInitRequest;
+import com.example.transaction.entity.type.TransactionType;
 import com.example.transaction.exception.TransactionServiceException;
-import com.example.transaction.util.TransactionTypeUtil;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
 import static java.util.Optional.ofNullable;
@@ -63,7 +62,7 @@ public class TransactionInitRequestHttpMessageConverter extends AbstractHttpMess
             .map(ServletRequestAttributes::getRequest)
             .map(request -> (Map<String, String>) request.getAttribute(HandlerMapping.URI_TEMPLATE_VARIABLES_ATTRIBUTE))
             .map(uriVars -> uriVars.get(INIT_REQUEST_TYPE_PATH_VARIABLE))
-            .map(TransactionTypeUtil::from)
+            .map(TransactionType::from)
             .orElseThrow(() -> new TransactionServiceException("Cannot extract transaction type from URI variables"));
     }
 
