# transaction-service/src/main/java/com/example/transaction/controller/converter/TransactionTypeConverter.java
@@ -4,14 +4,13 @@ import org.springframework.core.convert.converter.Converter;
 import org.springframework.lang.NonNull;
 import org.springframework.stereotype.Component;
 
-import com.example.transaction.dto.TransactionType;
-import com.example.transaction.util.TransactionTypeUtil;
+import com.example.transaction.entity.type.TransactionType;
 
 @Component
 public class TransactionTypeConverter implements Converter<String, TransactionType> {
 
     @Override
     public TransactionType convert(@NonNull String source) {
-        return TransactionTypeUtil.from(source);
+        return TransactionType.from(source);
     }
 }
