# transaction-service/src/main/java/com/example/transaction/service/transaction/confirm/WithdrawalConfirmHandler.java
@@ -6,11 +6,11 @@ import org.springframework.stereotype.Component;
 
 import com.example.transaction.dto.ConfirmRequest;
 import com.example.transaction.dto.TransactionConfirmResponse;
-import com.example.transaction.dto.TransactionType;
 import com.example.transaction.dto.WithdrawalConfirmRequest;
 import com.example.transaction.dto.WithdrawalRequestDto;
 import com.example.transaction.entity.OutboxEvent;
 import com.example.transaction.entity.Transaction;
+import com.example.transaction.entity.type.TransactionType;
 import com.example.transaction.external.mapper.ExternalMapper;
 import com.example.transaction.mapper.TransactionMapper;
 import com.example.transaction.repository.OutboxRepository;
@@ -19,7 +19,7 @@ import com.example.transaction.service.transaction.confirm.base.ConfirmRequestHa
 import com.example.transaction.util.DateTimeUtil;
 import com.example.transaction.util.JsonWrapper;
 
-import static com.example.transaction.dto.TransactionType.WITHDRAWAL;
+import static com.example.transaction.entity.type.TransactionType.WITHDRAWAL;
 
 @Component
 @RequiredArgsConstructor
@@ -52,7 +52,7 @@ public class WithdrawalConfirmHandler implements ConfirmRequestHandler {
     private OutboxEvent buildOutboxEvent(WithdrawalRequestDto payload) {
         return new OutboxEvent()
             .setTransactionId(payload.transactionId())
-            .setType(com.example.transaction.entity.type.TransactionType.WITHDRAWAL)
+            .setType(WITHDRAWAL)
             .setPayload(jsonWrapper.write(payload))
             .setCreated(dateTimeUtil.now());
     }
