# transaction-service/src/main/java/com/example/transaction/service/transaction/confirm/base/ConfirmRequestHandler.java
@@ -2,7 +2,7 @@ package com.example.transaction.service.transaction.confirm.base;
 
 import com.example.transaction.dto.ConfirmRequest;
 import com.example.transaction.dto.TransactionConfirmResponse;
-import com.example.transaction.dto.TransactionType;
+import com.example.transaction.entity.type.TransactionType;
 
 public interface ConfirmRequestHandler {
     TransactionType getType();
