# transaction-service/src/main/java/com/example/transaction/service/transaction/init/DepositInitHandler.java
@@ -4,7 +4,7 @@ import org.springframework.stereotype.Component;
 
 import com.example.transaction.dto.DepositInitRequest;
 import com.example.transaction.dto.TransactionInitResponse;
-import com.example.transaction.dto.TransactionType;
+import com.example.transaction.entity.type.TransactionType;
 import com.example.transaction.service.transaction.init.base.AbstractInitHandler;
 
 @Component
