# transaction-service/src/main/java/com/example/transaction/service/transaction/init/base/InitRequestHandler.java
@@ -2,7 +2,7 @@ package com.example.transaction.service.transaction.init.base;
 
 import com.example.transaction.dto.InitRequest;
 import com.example.transaction.dto.TransactionInitResponse;
-import com.example.transaction.dto.TransactionType;
+import com.example.transaction.entity.type.TransactionType;
 
 public interface InitRequestHandler {
     TransactionType getType();
